# alchemy-media-agent

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ALCHEMY_LAB_ACCEPTANCE_CHECKLIST.md  ALCHEMY_LAB_DEVELOPMENT_CHECKLIST.md  ALCHEMY_LAB_NOTES.md  RARE_STYLE_EXPLORER_SCHEMA.json  README.md  alchemy-media-agent.nginx.conf  design-qa.md  docker-compose.yml  pytest.ini  sources.json  定制化图片视频生成Agent_需求与技术蓝图_汇总版.docx
custom_media_agent_2_0/: .gitignore  README.md  pyproject.toml  requirements.txt
custom_media_agent_2_0/app/: __init__.py  config.py  main.py  schemas.py
custom_media_agent_2_0/app/agents/: __init__.py  runtime.py
custom_media_agent_2_0/docs/: central_brain_task_intent_model.md  claude_checkpoint_orchestrator.md  claude_code_source_fallback.md  template_visual_grammar_transfer.md  v2_reference_content_delivery_assurance_plan.md  v2_reference_intent_integrity_repair_spec.md
custom_media_agent_2_0/provider_data/: evolinkai_seed_cases.json
custom_media_agent_2_0/scripts/: import_v1_provider_env.ps1  run_dev.ps1  run_sync_worker.ps1  run_worker.ps1  setup_venv.ps1  test.ps1
custom_media_agent_2_0/tests/: test_intent_integrity.py  test_prompt_transform.py  test_reference_delivery.py  test_resource_provider_m2.py  test_v2_api.py  test_v2_contract.py  test_v2_provider_rate_limit.py  test_v2_strict_isolation.py  test_veyra_auth.py
services/v3_identity_sidecar/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.identity-sidecar.yml  pyproject.toml
src_skeleton/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
src_skeleton/app/: __init__.py  config.py  main.py  schemas.py
(+1014 files in other folders)
