[project]
name = "custom-media-agent-v2"
version = "0.1.0"
description = "Independent Custom Media Agent 2.0 API and V2 runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "httpx>=0.28.0",
  "openai-agents>=0.17.4",
  "Pillow>=10.4",
  "opencv-python-headless>=4.10,<5",
  "sse-starlette==3.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "qrcode>=7.4,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
