[project]
name = "custom-media-agent"
version = "0.1.0"
description = "Custom image/video generation agent platform skeleton"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "openai>=2.40",
  "openai-agents>=0.0.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "Pillow>=10.4",
  "qrcode>=8.0",
  "opencv-python-headless>=4.10,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "PyYAML>=6.0",
]
