[project]
name = "alchemy-v3-identity-sidecar"
version = "0.1.0"
description = "Standalone Doc99 gateway for identity-native ComfyUI workflows"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
  "Pillow>=10.4",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
